<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SocialMediaActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/post_imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/image_placeholder"
            android:contentDescription="@string/image_post"/>
        
        <Button
            android:id="@+id/createPost_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_image_post"/>

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:hint="@string/enter_your_description"
            android:inputType="text"
            android:autofillHints="no"/>

        <ListView
            android:id="@+id/users_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
</layout>